# songdle-v1

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  songdle-v1  songdle-v1-diagram
assets/: tailwind.css
run_dynamodb/: README.md
src/: main.rs
src/backend/: mod.rs  server_fn.rs
src/components/: echo.rs
src/views/: mainpage.rs  mod.rs  navbar.rs
