[package]
name = "songdle-v1"
version = "0.1.0"
authors = ["Alexander Wickman <alexander.k.wickman@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sync axum version with dioxus. Find using:
# cargo tree --features="dioxus/server"
axum = {version = "0.7.9", optional = true}
dioxus = { version = "0.6.3", features = ["router", "fullstack", "ssr"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["full"], optional = true}


[features]
default = []
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:axum"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
